--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <!--<li><b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>-->
                       <!--<li><b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>-->
-                      <li><b>•  [Grant]</b> "Seung-Mo Jin was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea</b></li>
-                      <li><b>•  [Grant]</b> ae-Geon Lee was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
+                      <li><b>•  [Grant]</b> Seung-Mo Jin was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea</b></li>
+                      <li><b>•  [Grant]</b> Jae-Geon Lee was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
                       <li><b>[2025.8]</b> </li>
                       <li><b>•  [Conference]</b> Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
                       <li><b>•  [Conference]</b>Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
@@ -368,18 +368,24 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                     <ul>
-                    <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!
+                    <li><b>[2024.11]</b> </li>
+                    <li><b>•  [Journal]</b> Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!
                         <a href="https://ieeexplore.ieee.org/document/10586762" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                    <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
+                    <li><b>[2024.9]</b> </li>
+                    <li><b>•  [Journal]</b> Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
                         <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                                    
-                    <li>[Aug.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2024 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!
+                    <li><b>[2024.8]</b> </li>
+                    <li><b>•  [Conference]</b> Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2024 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!
                         <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                    <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
+                    <li><b>[2024.7]</b> </li>
+                    <li><b>•  [Journal]</b> Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
                         <a href="https://ieeexplore.ieee.org/abstract/document/10614194" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                    <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
-                    <li>[Jan.] <b>Dong-Hoe Heo</b> has been awarded <b>2024 ICEIC Best Paper Award (Gold Prize)</b> Congrat!</li>
-                    <li>[Jan.] <b>Prof. Choo</b> has served as the Conference Secretary Chair at 2024 ICEIC</li>
-                    <li>[Jan.] <b>Prof. Choo</b> has served as the Session Chair at 2024 ASP-DAC</li>
+                    <li><b>[2024.4]</b> </li>
+                    <li><b>•  [Research Project]</b> "Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets" Outstanding Young Scientist Grant (우수신진연구) Project, sponsored by NRF, <b>HPIC lab.</b></li>
+                    <li><b>[2024.1]</b> </li>
+                    <li><b>•  [Award]</b> Best Paper Award (Silver Prize), 2025 ICEIC ,Congratulations, <b>Dong-Hoe.</b></li> 
+                    <li><b>•  [OC Member]</b> <b>Prof. Choo</b> has served as the Conference Secretary Chair at 2024 ICEIC</li>
+                    <li><b>•  [OC Member]</b> Organizing Committee, 2024 ASP-DAC, <b>Min-Seong</b></li>
                     </ul> 
                   </div>
                 </div>
