--- a/index.html
+++ b/index.html
@@ -315,26 +315,26 @@
                       <li><b>•  [Service]</b> Min-Seong served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
                       <li><b>•  [Award]</b> Min-Seong received the KSIA Award for Contribution to Semiconductor Industry Development (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>•  [Award]</b> Jae-Hyeon Pyeon received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
-                      <li><b>•  [Award]</b> Seung-Hwan Gong received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
-                      <li><b>•  [Award]</b> Dong-Hoe Heo and Seung-Hwan Gong received the Special Prize at the ISOCC 2025 Chip Design Contest.</li>
-                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
-                      <li><b>•  [Service]</b> Prof. Choo served on the Organizing Committee Member for APCCAS 2025.</li>
-                      <li><b>•  [Service]</b> Prof. Choo served on the Organizing Committee Member for ISOCC 2025.</li>
-                      <li><b>[2025.9]</b> </li>                        
-                      <li><b>•  [Award]</b> Dong-Hyun Lee and Shin-Uk Kang received the Corporate Special Award (Baum Design Systems) at the 26th Korean Semiconductor Design Challenge.</b>
+                      <li><b>•  [Award]</b> Jae-Hyeon received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
+                      <li><b>•  [Award]</b> Seung-Hwan received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
+                      <li><b>•  [Award]</b> Dong-Hoe and Seung-Hwan received the Special Prize at the ISOCC 2025 Chip Design Contest.</li>
+                      <li><b>•  [Award]</b> Seung-Mo and Dong-Ho received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
+                      <li><b>•  [Service]</b> Min-Seong served on the Organizing Committee for APCCAS 2025.</li>
+                      <li><b>•  [Service]</b> Min-Seong served on the Organizing Committee for ISOCC 2025.</li>
+                      <li>[2025.9] </li>                        
+                      <li><b>•  [Award]</b> Dong-Hyun and Shin-Uk received the Corporate Special Award (Baum Design Systems) at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
-                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Commissioner of the Korean Intellectual Property Office Award (특허청장상) at the 26th Korean Semiconductor Design Challenge.</b>
+                      <li><b>•  [Award]</b> Seung-Mo and Dong-Ho received the Commissioner of the Korean Intellectual Property Office Award (특허청장상) at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <!--<li><b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>-->
                       <!--<li><b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>-->
-                      <li><b>•  [Grant]</b> "Seung-Mo Jin was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea</b></li>
-                      <li><b>•  [Grant]</b> ae-Geon Lee was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
-                      <li><b>[2025.8]</b> </li>
-                      <li><b>•  [Conference]</b> Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
-                      <li><b>•  [Conference]</b>Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
-                      <li><b>•  [Invited Talk]</b> "고속 집적회로 설계", 2025년도 SoC 워크샵 및 산학교류회, <b>Min-Seong</b>.</li>
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025년도 SoC 워크샵 및 산학교류회, <b>Min-Seong</b>.</li>
+                      <li><b>•  [Grant]</b> Seung-Mo was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea</b></li>
+                      <li><b>•  [Grant]</b> Jae-Geon was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
+                      <li>[2025.8] </li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC" has been accepted for presentation at the 2025 IEEE Asian Solid-State Circuits Conference (A-SSCC).</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted for presentation at the 2025 IEEE Asian Solid-State Circuits Conference (A-SSCC).</li>
+                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "High-Speed Integrated Circuit Design" at the 2025 SoC Workshop.</li>
+                      <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Workshop.</li>
                       <li><b>[2025.7]</b> </li>                      
                       <li><b>•  [OC Member]</b> Organizing Committee, 2025 ITC-CSCC, <b>Min-Seong</b>.</li>
                       <li><b>•  [OC Member]</b> Organizing Committee, 2025년 상용반도체개발 기술워크숍, <b>Min-Seong</b>.</li>
